--- a/src/css/card-search.css
+++ b/src/css/card-search.css
@@ -1,10 +1,11 @@
 
 .card-search {
-    width: 100%;
-    margin-bottom: 0px;
-    margin: 10px 10px;
-    min-height: 380px;
-  transition: transform 0.3s ease ;
+  width: 100%;
+  max-width: 300px;
+  margin-bottom: 0px;
+  margin: 10px 10px;
+  min-height: 380px;
+  transition: transform 0.3s ease;
 }
 .card-search:hover {
   transform: translateY(-10px);
@@ -100,4 +101,15 @@ button.delete-button:hover {
 
 .deleting {
   animation: flash 1s infinite;
+}
+.image-card {
+  min-height: 290px;
+  width: 100%;
+}
+img.image-card-search {
+  width: 100%;
+  height: 100%;
+}
+.swiper.galery-search {
+  border-radius: 20px;
 }
