--- a/src/css/unlog.css
+++ b/src/css/unlog.css
@@ -5,3 +5,8 @@ button.unlog {
     font-weight: 500;
     text-decoration: underline;
 }
+button.unlogged {
+    color: red;
+    border: none;
+    background: none;
+}
