--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -5,9 +5,18 @@
 }
 
 :root {
-    --color-primary: #015089;
+    --color-primary: #4723D9;
     --color-secondary: #2ecc71;
     --font-principal: 'Poppins', sans-serif;
+    --font-text: 'Poppins', sans-serif;
+    --header-height: 3rem;
+    --nav-width: 68px;
+    --first-color: #4723D9;
+    --first-color-light: #AFA5D9;
+    --white-color: #F7F6FB;
+    --body-font: 'Nunito', sans-serif;
+    --normal-font-size: 1rem;
+    --z-fixed: 100
   }
 p{
     font-family: var(--font-principal);
