--- a/src/css/details.css
+++ b/src/css/details.css
@@ -91,3 +91,42 @@ h5 {
 img.img-thumbnail {
     width: 116px;
 }
+.chat-window {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 250px;
+    display: block; /* Oculto por defecto */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    overflow: hidden;
+    z-index: 1000;
+}
+
+.chat-header {
+    background-color: #25D366;
+    color: white;
+    padding: 15px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.chat-button {
+    display: block;
+    width: 100%;
+    background-color: #25D366;
+    color: white;
+    text-align: center;
+    padding: 15px;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    border-top: 1px solid #ddd;
+}
+
+.chat-button:hover {
+    background-color: #1EB354;
+}
