--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,5 +1,12 @@
 footer{
-    background-color: black;
+    background-color: white;
+    color: black;
 margin-top: 30px;
 padding: 20px 0px;
+}
+footer nav {
+    color: black;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
