--- a/src/css/app.css
+++ b/src/css/app.css
@@ -696,3 +696,10 @@ a.titulos-con-propiedades {
   width: 100% !important;
 }
 }
+@media(max-width :820px) {
+  section.home-page {
+    display: block;
+}
+}
+
+
