--- a/src/css/menu-admin.css
+++ b/src/css/menu-admin.css
@@ -89,8 +89,8 @@ a {
 
 
 
-
 .nav_link {
+    text-decoration: none;
     position: relative;
     color: var(--first-color-light);
     margin-top: 19px;
