--- a/src/css/app.css
+++ b/src/css/app.css
@@ -29,7 +29,7 @@ body {
   background-color: white;
   min-height: 600px;
 }
-
+a{text-decoration: none;}
 label {
   font-family: var(--font-principal);
 }
@@ -668,6 +668,7 @@ h3.title-regions a {
 
 a.titulos-con-propiedades {
   color: black;
+  text-decoration: none;
 }
 .regiones-div {
   padding: 10px;
@@ -700,6 +701,80 @@ a.titulos-con-propiedades {
   section.home-page {
     display: block;
 }
+.main-content-home {
+  padding: 10px;
+  width: 100%;
+}
+p.filter-item {
+  font-size: 9px;
+  font-weight: 500;
+  margin: 0 0 0 5px;
+  padding: 3px;
+}
+section.banner-main {
+  align-items: center;
+  background-position: 0 -190px;
+  background-repeat: no-repeat;
+  background-size: auto !important;
+}
+section.search-page {
+  display: block !important
+}
+section.list-prop {
+  width: 100% !important;
+}
+.map-search {
+  margin-top: 50px;
+  width: 100% !important;
+  height: 100% !important;
+}
+.adds {
+  width: 100%;
+}
+section.logged {
+  margin: 39px 40px;
+}section.edit-page, section.create-page {
+  padding: 0px 14px;
+}
 }
 
+@media(max-width :532px) {
+  .card-search {
+    width: 100%;
+    max-width: 232px !important;
+    margin-bottom: 0px;
+    margin: 10px 10px;
+    min-height: 338px;
+    transition: transform 0.3s ease;
 
+}
+}
+@media (max-width: 404px) {
+  .card-search {
+      width: 100%;
+      max-width: 100% !important;
+      height: 350px !important;
+      margin-bottom: 0px;
+      margin: 10px 10px;
+      min-height: 338px;
+      transition: transform 0.3s ease;
+  }
+}
+.regiones-div {
+  /* Otros estilos que necesites */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+/* Estilos adicionales para la clase active-region */
+.active-region {
+  transform: scale(1.1); /* Aumenta el tamaño del div al 110% */
+  box-shadow: 0 4px 8px rgba(13, 13, 13, 0.37);
+  border-radius: 20px; /* Agrega una sombra para un efecto más agradable */
+}
+
+.seccion-regiones {
+  margin: 20px 0px;
+  padding: 20px 0px;
+}.dropdown-menu.show {
+  display: block !important ;
+}
