--- a/src/css/app.css
+++ b/src/css/app.css
@@ -255,21 +255,29 @@ section.agenda {
 
 /* LOGIN  */
 .container-login {
-  text-align: center;
-  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
-  min-height: 279px;
+  width: 350px;
+  height: auto;
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 10px;
+  box-sizing: border-box;
+  padding: 20px 30px;
 }
 
 .container-login {
   text-align: center;
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.7);
-  min-height: 279px;
+  min-height: 350px;
   border-radius: 10px;
   max-width: 422px;
   margin: 0 auto;
 }
-
+.container-login h2 {
+  text-align: center;
+  margin: 10px 0 30px 0;
+  font-size: 28px;
+  font-weight: 800;
+}
 .buttons {
   margin-top: 30px;
 }
@@ -735,7 +743,7 @@ section.list-prop {
   width: 100%;
 }
 section.logged {
-  margin: 39px 40px;
+  margin: 39px 0px;
 }section.edit-page, section.create-page {
   padding: 0px 14px;
 }
@@ -798,4 +806,31 @@ button.accordion-button.collapsed {
 }
 h2.accordion-header {
   margin: 0px;
+}
+button.btn.btn-primary.btn-form{
+  padding: 1.3em 3em;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: wheat;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+
+button.btn.btn-primary.btn-form:hover {
+  background-color: #23c483;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}button.btn.btn-primary.btn-form:active {
+  transform: translateY(-1px);
+}
+.contenedor-recaptcha iframe {
+  width: 250px;
 }
